# AlgMathGeoLib

./: .gitignore  AlgMathGeoLibConfig.cmake.in  CMakeLists.txt  CommonOptions.cmake  README.md
linuxbash/: cmake_debug-tests.bash
src/: MathBuildConfig.h  MathGeoLib.h  MathGeoLibFwd.h  namespaces.h
src/Algorithm/: GJK.cpp  GJK.h  GJK2D.cpp  GJK2D.h  SAT.h
src/Algorithm/Random/: LCG.cpp
src/Algorithm/intersect/: GJK.cpp  GJK.h  GJK2D.cpp  GJK2D.h  SAT.cpp  SAT.h
src/Geometry/: AABB.cpp  AABB.h  AABB2D.h  Capsule.cpp  Capsule.h  Circle.cpp  Circle.h  Circle2D.cpp  Circle2D.h  Frustum.cpp  Frustum.h  GeometryAll.h  KDTree.h  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  LineSegment2D.cpp  LineSegment2D.h  OBB.cpp  OBB.h  OBB2D.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Polygon2DRef.h  Polyhedron.cpp  Polyhedron.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  Triangle2D.cpp  Triangle2D.h  TriangleMesh.cpp  TriangleMesh.h
src/Math/: BitFuncs.h  Callstack.cpp  Callstack.h  MathAll.h  MathConstants.h  MathFunc.cpp  MathFunc.h  MathLog.cpp  MathLog.h  MathTypes.h  Matrix.inl  MatrixProxy.h  Polynomial.cpp  Quat.cpp  Quat.h  Rect.h  Reinterpret.h  SSEMath.h  TransformOps.cpp  TransformOps.h  assume.h  float2.cpp  float2.h  float2.inl  float3.cpp  float3.h  float3x3.cpp  float3x3.h  float3x4.cpp  float3x4.h  float4.cpp  float4.h  float4_neon.h  float4d.cpp  float4d.h  float4x4.cpp  float4x4.h  float4x4_neon.h  float4x4_sse.h  grisu3.c  (+6 more)
src/Time/: Clock.cpp  Clock.h
src/algorithm/intersect/: SAT.h
src/algorithm/kalman_filter/: kf_eigen.cc  kf_eigen.h  ukf_eigen.cc  ukf_eigen.h
src/geometry/: AABB2d.cpp  AABB2d.h  OBB2d.cpp  OBB2d.h  circle2d.cpp  circle2d.h  geometry_all.h  geometry_fwd.h  line2d.cpp  line2d.h  line_segmt2d.cpp  line_segmt2d.h  polygon2d.h  rect2d.h
src/math/: bit_ops.h  constants.h  float2d.cpp  float2d.h  func.cpp  func.h  math_all.h  vec2d.h
tests/: CallstackTests.cpp  ClockTests.cpp  EncloseTests.cpp  FrustumTests.cpp  GJKTests.cpp  Math_float2Tests.cpp  NegativeTests.cpp  OBBTests.cpp  ObjectGenerators.h  PolyhedronTests.cpp  PositiveTests.cpp  SAT2DTests.cpp  SerializationTests.cpp  TestData.cpp  TestData.h  TestRunner.cpp  TestRunner.h  TransformTests.cpp  VectorTests.cpp
